feat: Added Database connection

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ author: Dragon-nick
 version: '1.0-SNAPSHOT'
 main: me.dragon.coralClanPlugin.CoralClanPlugin
 api-version: '1.21'
+database: true
 depend:
   - PlaceholderAPI
   - WorldGuard
