--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,11 @@ main: me.dragon.coralClanPlugin.CoralClanPlugin
 api-version: '1.21'
 database: true
 depend:
-  - PlaceholderAPI
-  - WorldGuard
-  - WorldEdit
+    - PlaceholderAPI
+    - WorldGuard
+    - WorldEdit
+
+commands:
+    clan:
+        description: Clan management commands
+        usage: /clan <subcommand> [args]
